# Instant-Messaging-Application

./: README.md
client/: CMakeLists.txt  Doxyfile  main.cpp
client/model/: core.h  crypto.h  message.h
client/src/: QTView.cpp  crypto.cpp  model.cpp  stdoutView.cpp
client/utils/: observer.h  subject.cpp  subject.h
client/view/: view.h
client/view/QTView/: QTView.h  loginDialog.h  mainwindow.h  mainwindow.ui  page.h  sideBar.h
server/: CMakeLists.txt  Doxyfile  database.h  db_schema.sql  main.cpp  message.h  server.h
server/src/: base64.cpp  database.cpp  server.cpp
